load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:go_naming_convention go_default_library
gazelle(
    name = "gazelle",
    prefix = "github.com/bgreeley/bazel-demo",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bgreeley/bazel-demo",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bazel-demo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_testcontainers_testcontainers_go//wait:go_default_library",
    ],
)
